--- a/app/src/main/res/layout/fragment_market_coin_tab.xml
+++ b/app/src/main/res/layout/fragment_market_coin_tab.xml
@@ -12,9 +12,9 @@
             android:layout_height="wrap_content">
 
             <com.cdkj.baselibrary.views.tablayout.TabLayout
-                app:tabIndicatorHeight="2.4dp"
+                app:tabIndicatorHeight="4dp"
                 android:id="@+id/tablayout"
-                style="@style/MyTabLayout"
+                style="@style/MyTabLayout2"
                 android:layout_weight="1"
                 android:layout_width="0dp"
                 android:layout_height="45dp"
