--- a/app/src/main/res/layout/activity_user_person.xml
+++ b/app/src/main/res/layout/activity_user_person.xml
@@ -1,11 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="25dp"
+            android:background="@color/user_center_bg" />
+
+        <com.cdkj.baselibrary.views.TopTitleLayout
+            android:id="@+id/title_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        </com.cdkj.baselibrary.views.TopTitleLayout>
 
         <LinearLayout
             android:id="@+id/lin_user_head"
@@ -40,15 +53,18 @@
 
         </LinearLayout>
 
-        <com.cdkj.link_community.views.ViewPagerIndicator
-            android:id="@+id/viewindicator"
+        <com.cdkj.baselibrary.views.tablayout.TabLayout
+            android:id="@+id/tablayout"
+            style="@style/MyTabLayout2"
             android:layout_width="match_parent"
-            android:layout_height="40dp" />
+            android:layout_height="45dp"
+            android:background="@color/white"
+            app:tabIndicatorHeight="4dp" />
 
         <View style="@style/style_split_line" />
 
 
-        <com.cdkj.baselibrary.views.EnabledViewpager
+        <android.support.v4.view.ViewPager
             android:id="@+id/viewpager"
             android:layout_width="match_parent"
             android:layout_height="0dp"
