--- a/app/src/main/res/layout/fragment_plate.xml
+++ b/app/src/main/res/layout/fragment_plate.xml
@@ -16,7 +16,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="板块"
+                android:text="版块"
                 android:textColor="@color/white"
                 android:textSize="@dimen/top_center_title_size" />
 
@@ -98,8 +98,8 @@
                         android:id="@+id/lin_recycler"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="15dp"
-                        android:layout_marginRight="15dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
                         android:descendantFocusability="blocksDescendants">
 
                         <android.support.v7.widget.RecyclerView
@@ -156,11 +156,11 @@
                             android:textSize="14sp" />
 
                         <TextView
-                            android:gravity="right"
                             android:layout_width="70dp"
                             android:layout_height="wrap_content"
                             android:layout_gravity="right"
                             android:layout_marginLeft="15dp"
+                            android:gravity="right"
                             android:text="涨跌幅"
                             android:textColor="@color/text_gray_8181881"
                             android:textSize="14sp" />
