--- a/app/src/main/res/layout/item_my_active_list.xml
+++ b/app/src/main/res/layout/item_my_active_list.xml
@@ -1,123 +1,158 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
     </data>
 
     <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:background="@color/white"
         android:gravity="center"
-        android:paddingLeft="15dp"
-        android:paddingRight="15dp"
         android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp">
 
         <LinearLayout
-            android:gravity="center_vertical"
             android:layout_width="match_parent"
-            android:layout_height="130dp">
+            android:layout_height="130dp"
+            android:gravity="center_vertical">
 
-            <ImageView
-                android:id="@+id/iv_adv"
-                android:scaleType="centerCrop"
+            <android.support.v7.widget.CardView
                 android:layout_width="110dp"
-                android:layout_height="100dp" />
+                android:layout_height="110dp"
+                app:cardCornerRadius="5dp">
+
+                <ImageView
+                    android:id="@+id/iv_adv"
+                    android:layout_width="110dp"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop" />
+
+                <FrameLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="-1.2dp">
+
+                    <ImageView
+                        android:id="@+id/img_state"
+                        android:layout_width="60dp"
+                        android:layout_height="23dp"
+                        tools:src="@drawable/activity_finished" />
+
+                    <TextView
+                        android:id="@+id/tv_state"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="-5dp"
+                        android:textColor="@color/white"
+                        android:textSize="13sp"
+                        tools:text="已结束" />
+
+                </FrameLayout>
+
+                <View
+                    android:id="@+id/view_gray"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="#c0d8d8d8"
+                    android:visibility="gone" />
+
+            </android.support.v7.widget.CardView>
 
             <LinearLayout
-                android:layout_marginLeft="5dp"
-                android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/tv_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:maxLines="2"
                     android:ellipsize="end"
+                    android:maxLines="2"
                     android:textColor="@color/text_black_cd"
-                    android:textSize="14sp"
-                    />
+                    android:textSize="14sp" />
 
                 <LinearLayout
-                    android:gravity="center_vertical"
-                    android:layout_marginTop="5dp"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:gravity="center_vertical">
 
                     <ImageView
-                        android:src="@drawable/active_date_time"
                         android:layout_width="16dp"
-                        android:layout_height="16dp" />
+                        android:layout_height="16dp"
+                        android:src="@drawable/active_date_time" />
 
                     <TextView
                         android:id="@+id/tv_date_time"
-                        android:layout_marginLeft="5dp"
-                        android:layout_weight="1"
                         android:layout_width="0dp"
                         android:layout_height="20dp"
+                        android:layout_marginLeft="5dp"
+                        android:layout_weight="1"
                         android:textColor="#ff818181"
-                        android:textSize="14sp"
-                        />
+                        android:textSize="14sp" />
 
                 </LinearLayout>
 
                 <LinearLayout
-                    android:gravity="center_vertical"
-                    android:layout_marginTop="5dp"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:gravity="center_vertical">
 
                     <ImageView
-                        android:src="@drawable/active_location"
                         android:layout_width="16dp"
-                        android:layout_height="16dp" />
+                        android:layout_height="16dp"
+                        android:src="@drawable/active_location" />
 
                     <TextView
                         android:id="@+id/tv_location"
-                        android:maxLines="1"
-                        android:ellipsize="end"
-                        android:layout_marginLeft="5dp"
-                        android:layout_weight="1"
                         android:layout_width="0dp"
                         android:layout_height="20dp"
+                        android:layout_marginLeft="5dp"
+                        android:layout_weight="1"
+                        android:ellipsize="end"
+                        android:maxLines="1"
                         android:textColor="#ff818181"
-                        android:textSize="14sp"
-                        />
+                        android:textSize="14sp" />
 
                 </LinearLayout>
 
                 <LinearLayout
-                    android:gravity="center_vertical"
-                    android:layout_marginTop="5dp"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:gravity="center_vertical">
 
                     <ImageView
-                        android:src="@drawable/active_browse"
                         android:layout_width="16dp"
-                        android:layout_height="16dp" />
+                        android:layout_height="16dp"
+                        android:src="@drawable/active_browse" />
 
                     <TextView
                         android:id="@+id/tv_browse"
-                        android:layout_marginLeft="5dp"
                         android:layout_width="0dp"
-                        android:layout_weight="1"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:layout_weight="1"
                         android:textColor="#ff818181"
-                        android:textSize="14sp"
-                        />
+                        android:textSize="14sp" />
 
                     <TextView
                         android:id="@+id/tv_price"
-                        android:gravity="right"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/colorPrimary"
-                        android:textSize="15sp"
-                        />
+                        android:gravity="right"
+                        android:text="dfdfdfdfff"
+                        android:textColor="@color/app_text_color_yellow"
+                        android:textSize="15sp" />
 
                 </LinearLayout>
 
@@ -126,11 +161,10 @@
         </LinearLayout>
 
         <View
-            android:layout_marginTop="14dp"
-            style="@style/style_split_line"/>
+            style="@style/style_split_line"
+            android:layout_marginTop="14dp" />
 
     </LinearLayout>
-    
 
-    
+
 </layout>
