--- a/app/src/main/res/layout/item_plate_hot.xml
+++ b/app/src/main/res/layout/item_plate_hot.xml
@@ -43,7 +43,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
-                android:text="BIT"
+                tools:text="BIT"
                 android:textColor="@color/txt_gray"
                 android:textSize="12sp" />
 
