--- a/cdcommon/src/main/res/layout/activity_abs_base_load.xml
+++ b/cdcommon/src/main/res/layout/activity_abs_base_load.xml
@@ -6,6 +6,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+
         <com.cdkj.baselibrary.views.TopTitleLayout
             android:id="@+id/title_view"
             android:layout_width="match_parent"
@@ -15,10 +16,10 @@
 
         <View
             android:id="@+id/view_v"
-            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="0.8dp"
-            android:background="@color/line_gray_cd" />
+            android:background="@color/line_gray_cd"
+            android:visibility="gone" />
 
 
         <com.cdkj.baselibrary.views.ViewLoadLayout
