--- a/cdcommon/src/main/res/values/styles.xml
+++ b/cdcommon/src/main/res/values/styles.xml
@@ -12,12 +12,12 @@
 
     //tabyout
 
-    <style name="MyTabLayout" parent="Widget.Design.TabLayout">
-        <item name="tabIndicatorColor">@color/tablayout_select</item>
-        <item name="tabIndicatorHeight">3dp</item>
-        <item name="tabTextAppearance">@style/MyTabTextAppearance</item>
-        <item name="tabSelectedTextColor">@color/tablayout_select</item>
-    </style>
+    <!--<style name="MyTabLayout" parent="Widget.Design.TabLayout">-->
+        <!--<item name="tabIndicatorColor">@color/tablayout_select</item>-->
+        <!--<item name="tabIndicatorHeight">3dp</item>-->
+        <!--<item name="tabTextAppearance">@style/MyTabTextAppearance</item>-->
+        <!--<item name="tabSelectedTextColor">@color/tablayout_select</item>-->
+    <!--</style>-->
 
     <!--Tablayout 字体大小-->
     <style name="MyTabTextAppearance" parent="TextAppearance.Design.Tab">
@@ -28,7 +28,7 @@
 
     <style name="MyTabLayout2" parent="Widget.Design.TabLayout">
         <item name="tabIndicatorColor">@color/app_indicator_deep_color</item>
-        <item name="tabIndicatorHeight">2dp</item>
+        <item name="tabIndicatorHeight">4dp</item>
         <item name="tabTextAppearance">@style/MyTabTextAppearance</item>
         <item name="tabSelectedTextColor">@color/app_indicator_deep_color</item>
     </style>
