--- a/app/src/main/res/layout/item_my_active_list.xml
+++ b/app/src/main/res/layout/item_my_active_list.xml
@@ -3,10 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <data>
-
-    </data>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -138,21 +134,42 @@
 
                     <TextView
                         android:id="@+id/tv_browse"
-                        android:layout_width="0dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
-                        android:layout_weight="1"
                         android:textColor="#ff818181"
-                        android:textSize="14sp" />
+                        android:textSize="14sp"
+                        tools:text="sdfsfsf" />
+
+                    <TextView
+                        android:id="@+id/tv_is_finished"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:background="@drawable/common_active_status_bg_gray"
+                        android:paddingBottom="1dp"
+                        android:paddingLeft="2dp"
+                        android:paddingRight="2dp"
+                        android:paddingTop="1dp"
+                        android:text="已结束"
+                        android:textColor="@color/white"
+                        android:textSize="12sp"
+                        android:visibility="gone" />
+
+                    <View
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:layout_weight="1" />
 
                     <TextView
                         android:id="@+id/tv_price"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_weight="1"
                         android:gravity="right"
-                        android:text="dfdfdfdfff"
                         android:textColor="@color/app_text_color_yellow"
-                        android:textSize="15sp" />
+                        android:textSize="15sp"
+                        tools:text="dfdfdfdfff" />
 
                 </LinearLayout>
 
